# paradigm-example-app

./: .gitignore  CMakeLists.txt  inc.txt  readme.md  src.txt
inc/: stdafx.h
src/: main.cpp
